--- a/shiro-web/pom.xml
+++ b/shiro-web/pom.xml
@@ -15,6 +15,27 @@
     <name>shiro-web</name>
 
     <dependencies>
+        <!--&lt;!&ndash; 一方包 &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>com.xlh.shiro</groupId>-->
+            <!--<artifactId>shiro-test</artifactId>-->
+            <!--<version>1.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>com.xlh</groupId>
+            <artifactId>shiro-test</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -27,6 +48,10 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>org.apache.shiro</groupId>-->
