--- a/shiro-web/pom.xml
+++ b/shiro-web/pom.xml
@@ -71,6 +71,18 @@
                 <!--</exclusion>-->
             <!--</exclusions>-->
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
         <!--<dependency>-->
             <!--<groupId>org.apache.shiro</groupId>-->
             <!--<artifactId>shiro-web</artifactId>-->
