--- a/shiro-web/src/main/webapp/WEB-INF/web.xml
+++ b/shiro-web/src/main/webapp/WEB-INF/web.xml
@@ -56,7 +56,7 @@
     </filter-mapping>
 
     <servlet>
-        <servlet-name>chatwithwebsocket-dispatcher</servlet-name>
+        <servlet-name>imooc-shiro-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <!-- 配置springMVC需要加载的配置文件 spring-dao.xml,spring-service.xml,spring-web.xml
             Mybatis - > spring -> springmvc -->
@@ -68,7 +68,7 @@
         <async-supported>true</async-supported>
     </servlet>
     <servlet-mapping>
-        <servlet-name>chatwithwebsocket-dispatcher</servlet-name>
+        <servlet-name>imooc-shiro-dispatcher</servlet-name>
         <!-- 默认匹配所有的请求 -->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
